# EEG-based-Motor-Imagery-BCI-System

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  README.md  README.zh.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml
configs/datasets/: bci_iv_2a.yaml  bci_iv_2b.yaml  physionet_eegbci.yaml
configs/experiments/: all_methods_compare.yaml  csp_lda_2b.yaml  csp_lda_baseline.yaml  csp_lda_eegbci.yaml  eegnet.yaml  eegnet_2b.yaml  eegnet_eegbci.yaml  eegnet_try_4_40_noica_noval.yaml  eegnet_try_8_30_ica.yaml  eegnet_try_8_30_noica.yaml  fbcsp_svm.yaml  fbcsp_svm_2b.yaml  fbcsp_svm_eegbci.yaml
data/: .gitkeep
docs/: CODE_REVIEW.md  README.md  defense_qa.md
docs/LaTeX-Bachelor/: latexmkrc  sdnubachelor.cls  sdnubachelor.tex  附件1：山东师范大学学士学位论文模板-理工类.doc
docs/architecture/: 分阶段实施计划.md  论文框架建议.md  项目架构设计.md
docs/notes/: 数据相关空间滤波.md  (+5 more)
models/: .gitkeep
python_backend/: README.md  __init__.py  analyze_model.py  datasets.py  download_datasets.py  preprocessing.py  replay_stream.py  test_datasets.py  train_model.py  training.py  utils.py
scripts/: analyze.py  download_data.py  evaluate.py  generate_multi_dataset_figures.py  generate_thesis_figures.py  regenerate_results.py  run_online.py  train.py
src/: __init__.py
tests/: test_data.py  test_evaluation.py  test_features.py  test_models.py  test_online.py  test_preprocessing.py
tutorials/: 01_什么是运动想象与EEG.py  02_加载与查看原始数据.py  03_滤波_Mu与Beta节律.py  04_事件与Epoching.py  05_特征与CSP共空间模式.py  06_LDA线性判别分析.py  07_完整流水线_从数据到预测.py  08_LSL仿真简介.py  README_学习指南.md
web_frontend/: index.html
(+138 files in other folders)
